<resources>
    <string name="facebook_app_id">4072790202790404</string>
    <string name="fb_login_protocol_scheme">fb4072790202790404</string>

    <string name="on_login">Đang Xác Thực</string>

    <string name="app_name">ePot</string>

    <string name="menu_home_page">Trang chủ</string>
    <string name="menu_shop">Cửa hàng</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_notification">Thông báo</string>
    <string name="menu_person">Cá nhân</string>

    <string name="on_workănging_description">Công trình đang thi công. Xin vui lòng đợi.</string>
    <string name="on_testing_description">Đây là khu vực test thuộc TestingActivity - activity_testing.
        Mọi thay đổi trong này sẽ ko đc đưa lên Github.</string>

    <string name="add_to_cart">Thêm hàng vào giỏ</string>
    <string name="empty">Hết hàng</string>
    <string name="submit">Xác nhận</string>
    <string name="agree">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="order">Đặt hàng</string>
    <string name="amount_2dot" formatted="false">Số lượng</string>
    <string name="max_formatted" formatted="false">Tối đa: %d</string>
    <string name="price_formatted" formatted="false">Giá: %s</string>
    <string name="single_price_formatted" formatted="false">Đơn giá: %1$s</string>
    <string name="color">Màu sắc</string>
    <string name="total_money_2dot">Tổng tiền :</string>
    <string name="purcharse">Tiến hành thanh toán</string>
    <string name="all">Tất cả</string>
    <string name="cart">Giỏ hàng</string>
    <string name="find">Tìm kiếm</string>
    <string name="saled_already">Đã bán</string>

    <string name="percent_salepro">50% giảm</string>

    <string name="default_product_name">Dummy Name</string>
    <string name="provide_by">Cung cấp bởi</string>

    <string name="select_all">Chọn tất cả</string>
    <string name="deselect_all">Bỏ chọn tất cả</string>
    <string name="delete_all">Xóa tất cả</string>

    <string name="format_price" formatted="false">%,dđ</string>
    <string name="format_price_strike" formatted="false"><strike>%,dđ</strike></string>
    <string name="default_price" formatted="false">1,000,000đ</string>
    <string name="default_price_strike" formatted="false"><strike>1,500,000đ</strike></string>

    <!--string resources of layout Cart-->
    <string name="Name_Title">Tên tiêu đề</string>
    <string name="Name_Title_Cart">Giỏ hàng</string>
    <string name="Name_Title_Payment">Thanh toán</string>
    <string name="Name_Title_Address">Địa chỉ giao hàng</string>

    <!--string resources of layout payment-->
    <string name="txt_productprice_payment">Sản phẩm</string>
    <string name="txt_transportprice_payment">Vận chuyển</string>
    <string name="txt_voucher_payment">Giảm giá</string>
    <string name="txt_totalprice_payment">Tổng tiền</string>

    <string name="address_delivery">Địa chỉ giao hàng</string>
    <string name="method_payment">Phương thức thanh toán</string>

    <string name="complete_payment">Thành công!</string>
    <string name="complete_payment2">Đơn hàng của bạn sẽ được sớm giao đến</string>
    <string name="complete_payment3">Cảm ơn vì đã sử dụng Epot</string>

    <string name="fail_payment">Thất bại!</string>
    <string name="fail_payment2">Dường như có vấn đề trong việc thanh toán</string>

    <string name="btn_complete_payment">Tiếp tục mua sắm</string>
    <string name="btn_payment">Đặt hàng</string>
    <string name="btn_cart">Thanh toán</string>
    <string name="btn_address">Thêm vào</string>
    <string name="btn_again_payment">Thử lại lần nữa</string>
    <string name="txt_gohome">Trở về trang chủ</string>

    <!--    string resources of layout cart address-->
    <string name="Name_Address">Tên</string>
    <string name="Name_Address_edt">Minh Nhực</string>
    <string name="Phone_Address">Số điện thoại</string>
    <string name="Phone_Address_edt">0382259845</string>
    <string name="City_Address">Tỉnh, thành phố</string>
    <string name="City_Address_edt">Thành phố Hồ Chí Minh</string>
    <string name="District_Address">Quận, huyện</string>
    <string name="District_Address_edt">Quận thủ Đức</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_Myshop">Đơn hàng</string>
    <string name="hint_search">Tìm kiếm trên Epot</string>
    <string name="Selling">Sản phẩm bán chạy</string>
    <string name="Category">Danh mục</string>
    <string name="Suggestion">Gợi ý hôm nay</string>
    <string name="See_All">Xem tất cả </string>
    <string name="refresh">Làm mới</string>
    <string name="Shoes">Giày</string>
    <string name="Clothes">Quần áo</string>
    <string name="Lock">Đồng hồ</string>
    <string name="Locatin">TP.Hồ Chí Minh, Việt Nam</string>

    // string resources of layout login, logout, splash, reset password

    <string name="Login">Đăng nhập</string>
    <string name="Logout">Đăng xuất</string>
    <string name="User_Name">Tên đăng nhập</string>
    <string name="Password">Mật khẩu</string>
    <string name="Forgot_password">Quên mật khẩu?</string>
    <string name="No_Acount">Chưa có tài khoản?  </string>
    <string name="Social_NetWork">Đăng nhập với tài khoản xã hội</string>

    <string name="Sign_Up">Đăng ký</string>
    <string name="Enter_Phone">Nhập số điện thoại</string>
    <string name="Phone">Số điện thoại</string>
    <string name="Sent_OTP">Gửi OTP</string>

    <string name="Enter_OTP">Nhập mã OTP</string>
    <string name="Resent_code">Gửi lại mã</string>
    <string name="Continue">Tiếp tục</string>

    <string name="Confirm_pass">Xác nhận mật khẩu</string>
    <string name="Name">Họ tên</string>
    <string name="Day_of_birth">Ngày sinh</string>
    <string name="Sex">Giới tính</string>
    <string name="Note_SignUp">Bằng việc đăng ký, bạn đã đồng ý với Điều khoản Dịch vụ và Chính sách Riêng tư của chúng tôi</string>

    <string name="Enter_password">Nhập số điện thoại của bạn</string>
    <string name="Enror_phone">Số điện thoại này chưa được đăng kí tài khoản</string>

    <string name="Code">Mã</string>

    <string name="Confirm">Xác nhận</string>
    <string name="Time">(120)</string>
    <string name="Phone_Number">+84</string>

    <string name="Search">Tìm kiếm</string>

    //string resource product_item

    <string name="Sale"> -20% </string>
    <string name="Cmt">(10)</string>
    <string name="storename">Store Name</string>
    <string name="productname">Product name</string>
    <string name="Sold">sold</string>
    <string name="new_price">New price đ</string>
    <string name="old_price">Old price đ</string>

    <!--    string resources of layout My Rating-->
    <string name="my_rating">Đánh giá của bạn</string>
    <string name="my_rating2">Hãy chia sẻ cảm nhận về sản phẩm này nhé!</string>
    <string name="btn_rating">Đánh giá</string>
    <string name="hint_rating">Hãy chia sẻ những điều bạn thích về sản phẩm này!</string>

    <!--    string resources of layout MyShop Overview-->
    <string name="myshop_overview_txt_onOutOfStock">Hết hàng</string>
    <string name="myshop_overview_txt_onSelling">Đang bán</string>
    <string name="myshop_overview_txt_Cancelled">Đã hủy</string>
    <string name="myshop_overview_txt_onConfirming">Chờ xác nhận</string>
    <string name="myshop_overview_txt_onShipping">Đang giao</string>
    <string name="myshop_overview_txt_complete">Thành công</string>
    <string name="your_cart_is_empty">Giỏ hàng của bạn đang trống</string>

    <!--  Error-->
    <string name="error_not_enough_info">Chưa điền đầy đủ thông tin!</string>
    <string name="error_incorrect_info">Có thông tin điền lỗi, vui lòng kiểm tra lại!</string>
    <string name="error_existing_username">Tên đăng nhập đã tồn tại!</string>
    <string name="error_not_50_char">Độ dài không quá 50 kí tự!</string>
    <string name="error_not_special_char">Chỉ chứa kí tự a–z, A–Z, 0-9!</string>
    <string name="error_define_pass">Xác nhận mật khẩu sai!</string>
    <string name="error_length_6_to_50">Độ dài mật khẩu tối thiểu 6, tối đa 50 kí tự!</string>
    <string name="error_wrong_username_pass">Tên đăng nhập hoặc mật khẩu sai!</string>
    <string name="error_duplicate_phone_number">Số điện thoại đã đăng kí tài khoản!</string>
    <string name="annouce_creat_acc_succsess">Tạo tài khoản thành công!</string>
    <string name="error_wrong_OTP">Nhập mã OTP sai.Vui lòng nhập lại hoặc nhấn vào nút "Gửi lại mã" để nhận mã mới khi hết thời gian chờ!</string>
    <string name="error_connect_firebar">Có lỗi xáy ra khi kết nối với hệ thống, vui lòng thử lại sau!</string>
    <string name="error_5_otp">Nhập sãi mã OTP 5 lần, vui lòng thử lại sau!</string>
    <string name="see_more">Xem thêm</string>

    //Login with zalo

    <string name="appID"> 4219504627897331336 </string>
    <string name="Login_with_zalo"> Đăng kí với zalo</string>

    <string-array name="Sexarray">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>

    <string-array name="OptionSortProduct">
        <item>Mới nhất</item>
        <item>A -> Z</item>
        <item>Z -> A</item>
        <item>Thấp -> Cao</item>
        <item>Cao -> Thấo</item>
        <item>None</item>
    </string-array>

    <string name="watch_more">Xem thêm</string>
    <string name="ChangePassword_Successful">Đổi mật khẩu thành công!</string>
    <string name="NotcorrectPassword">Không đúng mật khẩu!</string>
</resources>
