<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_home_page"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home_page"
        android:enabled="true"
        />
    <item android:id="@+id/menu_shop"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_local_grocery_store_24"
        android:title="@string/menu_shop"
        android:enabled="true"
        />
    <item android:id="@+id/menu_cart"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_icon"
        android:title="@string/menu_cart"
        android:enabled="true"
        />
    <item android:id="@+id/menu_notifycation"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/menu_notification"
        android:enabled="true"
        />
    <item android:id="@+id/menu_personal"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_person"
        android:enabled="true"
        />
</menu>