<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <exam.nlb2t.epot.Views.Title_View
            android:id="@+id/title_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:TitleName="Thêm địa chỉ giao hàng"
            app:TitleSize="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/name_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Name_Address"
            android:textSize="15dp"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_address"/>
        <EditText
            android:id="@+id/name_address_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/Name_Address_edt"
            android:textSize="18dp"
            android:inputType="textAutoComplete"

            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/name_address"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/phone_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Phone_Address"
            android:textSize="15dp"

            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintTop_toBottomOf="@id/name_address_edt"/>
        <EditText
            android:id="@+id/phone_address_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/Phone_Address_edt"
            android:textSize="18dp"
            android:inputType="textAutoComplete"

            app:layout_constraintTop_toBottomOf="@id/phone_address"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintEnd_toEndOf="@id/name_address_edt"/>

        <TextView
            android:id="@+id/city_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/City_Address"
            android:textSize="15dp"

            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintTop_toBottomOf="@id/phone_address_edt"/>
        <EditText
            android:id="@+id/city_address_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/City_Address_edt"
            android:textSize="18dp"
            android:inputType="textAutoComplete"

            app:layout_constraintTop_toBottomOf="@id/city_address"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintEnd_toEndOf="@id/name_address_edt"/>

        <TextView
            android:id="@+id/district_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/District_Address"
            android:textSize="15dp"

            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintTop_toBottomOf="@id/city_address_edt"/>
        <EditText
            android:id="@+id/district_address_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/District_Address_edt"
            android:textSize="18dp"
            android:inputType="textAutoComplete"

            app:layout_constraintTop_toBottomOf="@id/district_address"
            app:layout_constraintStart_toStartOf="@id/name_address"
            app:layout_constraintEnd_toEndOf="@id/name_address_edt"/>

        <Button
            style="@style/cartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/btn_large_background"
            android:text="@string/btn_address"

            android:layout_marginHorizontal="@dimen/large_btn_marhor"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>