<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <exam.nlb2t.epot.Views.MyShopOverview_Item
            android:id="@+id/item_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:OverviewName="@string/myshop_overview_txt_complete"
            app:OverviewValue="0" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/drark_gray" />

        <exam.nlb2t.epot.Views.MyShopOverview_Item
            android:id="@+id/item_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:OverviewName="@string/myshop_overview_txt_onShipping"
            app:OverviewValue="0" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/drark_gray" />

        <exam.nlb2t.epot.Views.MyShopOverview_Item
            android:id="@+id/item_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:background="@color/transparent"
            app:OverviewName="@string/myshop_overview_txt_onConfirming"
            app:OverviewValue="0" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <exam.nlb2t.epot.Views.MyShopOverview_Item
            android:id="@+id/item_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            app:OverviewName="@string/myshop_overview_txt_Cancelled"
            app:OverviewValue="0" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/drark_gray" />

        <exam.nlb2t.epot.Views.MyShopOverview_Item
            android:id="@+id/item_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            app:OverviewName="@string/myshop_overview_txt_onSelling"
            app:OverviewValue="0" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/drark_gray" />

        <exam.nlb2t.epot.Views.MyShopOverview_Item
            android:id="@+id/item_outofstock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:background="@color/transparent"
            app:OverviewName="@string/myshop_overview_txt_onOutOfStock"
            app:OverviewValue="0" />
    </LinearLayout>
</LinearLayout>