<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG_login_logout">


    <Button
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Sign_Up"
            android:textColor="@color/Title_login_logout"
            android:textSize="@dimen/big_title_size_text"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_Enter_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/Enter_OTP"
        android:textColor="@color/black"
        android:textSize="@dimen/big_title_size_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/tv_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Code"
        android:textColor="@color/Title"
        android:textSize="@dimen/normal_title_size_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Enter_Phone" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Phone"
        app:layout_constraintVertical_bias="0.03">

        <EditText
            android:id="@+id/et_Phone"
            style="?android:attr/spinnerItemStyle"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"

            android:text="+84"
            app:layout_constraintTop_toBottomOf="@+id/tv_Phone"
            tools:layout_editor_absoluteX="44dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:layout_marginEnd="32dp"
            android:textColor="@color/mainColor"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Resent_code"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/small_title_size_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/Big_btn_size"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_background"
        android:text="@string/Continue"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_content_size_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.221" />


</androidx.constraintlayout.widget.ConstraintLayout>