<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="@dimen/small_image_size"
        android:layout_height="@dimen/small_image_size"
        android:id="@+id/image_item"
        android:src="@mipmap/mango"
        android:scaleType="fitCenter"
        android:background="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_marginStart="@dimen/normal_padding"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtName_item"
            android:text="@string/default_product_name"
            style="@style/TittleBigSize"
            app:layout_constraintTop_toTopOf="@id/image_item"
            app:layout_constraintStart_toEndOf="@id/image_item"
            android:layout_marginStart="@dimen/normal_padding"
            android:layout_marginTop="@dimen/normal_padding"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_origin"
            android:text="@string/default_price_strike"
            android:textSize="@dimen/normal_content_size_text"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/txtName_item"
            app:layout_constraintStart_toStartOf="@id/txtName_item"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price_current"
        android:text="@string/default_price"
        android:textSize="@dimen/normal_title_size_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/price_origin"
        app:layout_constraintBottom_toBottomOf="@id/price_origin"
        app:layout_constraintStart_toEndOf="@id/price_origin"
        android:layout_marginStart="@dimen/normal_padding"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_amount"
        app:layout_constraintTop_toBottomOf="@id/image_item"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/normal_padding"
        android:layout_marginEnd="@dimen/normal_padding"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/amount_2dot"
            style="@style/TittleNormalSize" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <com.thunderstudio.mylib.Views.ChooseAmountLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amount_picker"
            app:button_size="@dimen/normal_button_size"
            app:minValue="1"
            app:maxValue="10"
            app:stepValue="1"
            app:src_increase="@mipmap/ic_plus"
            app:src_decrease="@mipmap/ic_minus"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtAmount_Max"
        android:text="@string/max_formatted"
        android:textSize="@dimen/normal_title_size_text"

        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_amount"
        app:layout_constraintStart_toStartOf="@id/layout_amount"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/options_holder"
        app:layout_constraintTop_toBottomOf="@id/txtAmount_Max"
        app:layout_constraintStart_toStartOf="@id/txtAmount_Max"

        android:background="@color/light_gray"
        >
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/options_holder"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/normal_padding"
        android:layout_marginEnd="@dimen/normal_padding"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/btn_submit"
           android:textSize="@dimen/normal_button_text"
           android:text="@string/add_to_cart"
           android:textAllCaps="false"
           />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>